--- a/index.html
+++ b/index.html
@@ -1,10 +1,69 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
+<!--
+	Fractal by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-	<head>
-		<title>EyeInspo</title>
-	</head>
 
-	<body>
-		Test.
-	</body>
+<head>
+	<title>EyeInspo</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<header id="header">
+		<div class="content">
+			<h1>
+				<img class="appIcon" src="images/icon.png" alt="Icon" />
+				EyeInspo
+			</h1>
+			<p>Coming soon.<br /></p>
+		</div>
+		<div class="image phone">
+			<div class="inner"><img src="images/blank.jpg" alt="Preview" /></div>
+		</div>
+	</header>
+
+	<!-- One -->
+	<section id="one" class="wrapper style2 special">
+		<header class="major">
+			<!-- <h2>Available on Android and iOS</h2> -->
+		</header>
+		<ul class="icons major">
+			<li><span class="icon brands fa-android"><span class="label">Android</span></span></li>
+			<li><span class="icon brands fa-apple"><span class="label">iOS</span></span></li>
+		</ul>
+	</section>
+
+	<!-- Footer -->
+	<footer id="footer">
+		<!-- <ul class="icons">
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul> -->
+		<p class="copyright">
+			<a href="privacy.html">Privacy Policy</a><br />
+			&copy; Made with <a href="http://html5up.net">HTML5 UP</a>
+		</p>
+	</footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
