Updated Privacy Policy

--- a/privacy.html
+++ b/privacy.html
@@ -36,20 +36,75 @@
 		<header class="major">
 			<h2>Privacy Policy</h2>
 		</header>
-		<p display="inline">
-			EyeInspo does not collect any personal data.
-		</p>
-		<p display="inline">
+
+		<p>This privacy policy describes how we handle personal data and use permissions in our application.</p>
+		</br>
+
+		<h4>Data Collection</h4>
+		<p>
+			We do not collect any personal data from users through our application.
+
 			Our definition of personal data is based on the privacy laws and regulations of the EU, including the
 			General Data Protection Regulation (GDPR).
-			</br>
+
 			These are widely regarded as the strongest privacy protections in the world.
 			We consider any information about you or your behavior that can be traced back to you as personal data.
 		</p>
+		</br>
 
-		<p display="inline">
-			For questions, contact us at
-			<a href="mailto:privacy@eyeinspo.app" title="mailto:privacy@eyeinspo.app">privacy@eyeinspo.app</a>
+		<h4>Permissions</h4>
+		<p>Our application requests the following permissions:</p>
+		<table style="text-align: left;">
+			<tr>
+				<th>Permission</th>
+				<th>Purpose</th>
+			</tr>
+			<tr>
+				<td>WRITE_EXTERNAL_STORAGE (Android), NSPhotoLibraryUsageDescription (iOS)</td>
+				<td>This permission is used to allow the application to write data to external storage.
+					This is needed to export images and videos made with EyeInspo.
+					However, we do not access or collect any personal data through this permission.
+				</td>
+			</tr>
+			<tr>
+				<td>INTERNET (Android)</td>
+				<td>This permission is required for the application to access the internet and communicate with external
+					servers or services. It is used solely for the purpose of providing the intended functionality of
+					the application and does not involve the collection of personal data.</td>
+			</tr>
+		</table>
+		</br>
+
+		<h4>Third-Party Services</h4>
+		<p>We may use third-party services that process anonymous usage data to help us improve our application.
+			However, these services do not collect or store any personal data.</p>
+		</br>
+
+		<h4>Security</h4>
+		<p>
+			We take appropriate measures to protect the security of your information and prevent unauthorized access,
+			loss, or alteration.
+			However, please be aware that no method of transmission over the internet or electronic storage is
+			completely secure and we cannot guarantee absolute security.
+		</p>
+		</br>
+
+		<h4>Your Rights</h4>
+		<p>Under the GDPR and other applicable privacy laws, you have the right to:</p>
+		<ul style="list-style-type: none;">
+			<li>Access your personal data that we may process, if any.</li>
+			<li>Rectify any inaccurate personal data we may have.</li>
+			<li>Request the erasure of your personal data, unless we have a legal obligation to retain it.</li>
+			<li>Restrict or object to the processing of your personal data in certain circumstances.</li>
+			<li>Request the portability of your personal data, where feasible.</li>
+			<li>Withdraw your consent for the processing of your personal data, if applicable.</li>
+		</ul>
+		</br>
+
+		<h4>Contact</h4>
+		<p>
+			If you have any questions or concerns regarding this privacy policy, please contact us at
+			<a href="mailto:privacy@eyeinspo.app" title="mailto:privacy@eyeinspo.app">privacy@eyeinspo.app</a>.
 		</p>
 	</section>
 
