--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 				</ul> -->
 		<p class="copyright">
 			<a href="privacy.html">Privacy Policy</a><br />
+			<a href="terms.html">Terms and Conditions</a><br />
 			<a href="imprint.html">Imprint</a><br />
 			<br />
 			&copy; Made with <a href="http://html5up.net">HTML5 UP</a>
