Removed mail link, minor text tweak

--- a/imprint.html
+++ b/imprint.html
@@ -41,10 +41,7 @@
 			</br>
 			Germany
 		</p>
-		<p display="inline">
-			E-Mail: <a href="mailto:contact@eyeinspo.app" title="mailto:contact@eyeinspo.app">contact@eyeinspo.app</a>
-			</br>
-		</p>
+		<p display="inline">E-Mail: contact@eyeinspo.app</br></p>
 	</section>
 
 	<!-- Scripts -->
