--- a/privacy.html
+++ b/privacy.html
@@ -34,7 +34,7 @@
 	<!-- One -->
 	<section id="one" class="wrapper style2 special">
 		<header class="major">
-			<h2>Privacy Policy</h2>
+			<h2>Privacy Policy for EyeInspo</h2>
 		</header>
 
 		<p>This privacy policy describes how we handle personal data and use permissions in our application.</p>
@@ -104,7 +104,7 @@
 		<h4>Contact</h4>
 		<p>
 			If you have any questions or concerns regarding this privacy policy, please contact us at
-			<a href="mailto:privacy@eyeinspo.app" title="mailto:privacy@eyeinspo.app">privacy@eyeinspo.app</a>.
+			privacy@eyeinspo.app.
 		</p>
 	</section>
 
