Going live with Website!

--- a/terms.html
+++ b/terms.html
@@ -24,7 +24,7 @@
 			<a href="index.html">
 				<h1>
 					<img class="appIcon" src="images/icon.png" alt="Icon" />
-					EyeInspo
+					<img class="titleHeader" src="images/titlebanner.png" alt="TitleBanner" />
 				</h1>
 			</a>
 		</div>
@@ -120,7 +120,7 @@
 		<h5>b. Cancellation and Refunds</h5>
 		<p>
 			Refund requests for in-app purchases will be considered on a case-by-case basis. Users may contact our
-			support team at contact@eyeinspo.app to request a refund and provide details regarding the purchase and the
+			support team at support@eyeinspo.app to request a refund and provide details regarding the purchase and the
 			reason for the refund request.
 		</p>
 
