--- a/index.html
+++ b/index.html
@@ -23,12 +23,18 @@
 		<div class="content">
 			<h1>
 				<img class="appIcon" src="images/icon.png" alt="Icon" />
-				EyeInspo
+				<img class="titleHeader" src="images/titlebanner.png" alt="TitleBanner" />
 			</h1>
-			<p>Coming soon.<br /></p>
+			<p>Endless eye makeup inspiration.<br /></p>
+			<ul class="actions">
+				<li class="badge"><a href="https://apps.apple.com/app/eyeinspo-makeup-inspiration/id6449713356">
+						<img src="images/apple_badge.png" alt="iOS" /></a></li>
+				<li class="badge"><a href="https://play.google.com/store/apps/details?id=app.eyeinspo.eyeinspo">
+						<img src="images/google_badge.png" alt="Android" /></a></li>
+			</ul>
 		</div>
 		<div class="image phone">
-			<div class="inner"><img src="images/blank.jpg" alt="Preview" /></div>
+			<div class="inner"><img src="images/screen.png" alt="Preview" /></div>
 		</div>
 	</header>
 
@@ -38,18 +44,25 @@
 			<!-- <h2>Available on Android and iOS</h2> -->
 		</header>
 		<ul class="icons major">
-			<li><span class="icon brands fa-android"><span class="label">Android</span></span></li>
-			<li><span class="icon brands fa-apple"><span class="label">iOS</span></span></li>
+			<li><a href="https://apps.apple.com/app/eyeinspo-makeup-inspiration/id6449713356"
+					class="icon brands fa-apple"><span class="label">iOS</span></a></li>
+			<li><a href="https://play.google.com/store/apps/details?id=app.eyeinspo.eyeinspo"
+					class=" icon brands fa-android"><span class="label">Android</span></a></li>
 		</ul>
 	</section>
 
 	<!-- Footer -->
 	<footer id="footer">
-		<!-- <ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul> -->
+		<ul class="icons">
+			<li><a href="https://www.tiktok.com/@eyeinspo.official" class="icon brands fa-tiktok">
+					<span class="label">TikTok</span></a></li>
+			<li><a href="https://www.instagram.com/eyeinspo.official" class="icon brands fa-instagram">
+					<span class="label">Instagram</span></a></li>
+			<li><a href="https://www.pinterest.de/eyeinspo" class="icon brands fa-pinterest">
+					<span class="label">Pinterest</span></a></li>
+			<li><a href="https://youtube.com/channel/UCHRrOqNzvez6cDCjkKugtoQ" class="icon brands fa-youtube">
+					<span class="label">Youtube</span></a></li>
+		</ul>
 		<p class="copyright">
 			<a href="privacy.html">Privacy Policy</a><br />
 			<a href="terms.html">Terms and Conditions</a><br />
