--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
 			<a href="index.html">
 				<h1>
 					<img class="appIcon" src="images/icon.png" alt="Icon" />
-					EyeInspo
+					<img class="titleHeader" src="images/titlebanner.png" alt="TitleBanner" />
 				</h1>
 
 			</a>
