--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 				<img class="titleHeader" src="images/titlebanner.png" alt="TitleBanner" />
 			</h1>
 			<p>Endless eye makeup inspiration.<br /></p>
-			<ul class="actions">
-				<li class="badge"><a href="https://apps.apple.com/app/eyeinspo-makeup-inspiration/id6449713356">
-						<img src="images/apple_badge.png" alt="iOS" /></a></li>
-				<li class="badge"><a href="https://play.google.com/store/apps/details?id=app.eyeinspo.eyeinspo">
-						<img src="images/google_badge.png" alt="Android" /></a></li>
-			</ul>
+			<div class="actions">
+				<a class="badge" href="https://apps.apple.com/app/eyeinspo-makeup-inspiration/id6449713356">
+					<img src="images/apple_badge.png" alt="iOS" /></a>
+				<a class="badge" href="https://play.google.com/store/apps/details?id=app.eyeinspo.eyeinspo">
+					<img src="images/google_badge.png" alt="Android" /></a>
+			</div>
 		</div>
 		<div class="image phone">
 			<div class="inner"><img src="images/screen.png" alt="Preview" /></div>
